# Greedy_snake

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
src/: food.c  food.h  game.c  game.h  input.c  input.h  main.c  snake.c  snake.h  ui.c  ui.h
